# Generative_AI_on_arm

./: .gitignore  README.md  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab3.md  scratch.py  setup.sh  setup2.sh  setup_graviton.sh  setup_pi5.sh
openelm_results/: f16_pi_results.txt  q4_pi_results.csv  q4_pi_results.txt  q8_pi_results.csv  q8_pi_results.txt
scripts/: bench_f32.sh  benchmark_openelm.sh  chat_Q8.sh  chat_f16.sh  first_time_to_token.cpp  parse_results.py
slides/: ~$chapter2.pptx
src/cpp/blas/: CMakeLists.txt  benchmark_f32.cpp
src/cpp/common/: sizes.cpp
src/cpp/f16_f16_f16p/: CMakeLists.txt  benchmark_f16.cpp  benchmark_f16_scaling.cpp  kai_f16_inf.cpp
src/cpp/f32_f32_f32p/: CMakeLists.txt  benchmark_f32.cpp  benchmark_f32_scaling.cpp  kai_f32_inf.cpp
src/cpp/f32_i8_i4_dotprod/: CMakeLists.txt  benchmark_i8_dotprod.cpp  benchmark_i8_dotprod_scaling.cpp  kai_i8_dotprod_inf.cpp
src/cpp/f32_i8_i4_i8mm/: CMakeLists.txt  benchmark_i8_i8mm.cpp  benchmark_i8_i8mm_scaling.cpp  benchmark_i8mm.cpp  kai_i8_i8mm_inf.cpp
src/cpp/naive/: CMakeLists.txt  benchmark_naive.cpp  kernel.h
src/cpp/results/: blas_f32_scaling_results.csv  f16_scaling_results.csv  f32_scaling_results.csv  i8_dotprod_scaling_results.csv  i8_i8mm_scaling_results.csv
src/python/: kai_quantization.py
